# customerbaseanalysis

./: README.md  pyproject.toml
src/customerbaseanalysis/: __init__.py  cohort.py  ctime.py  data.py  decile.py  foreach.py  mixins.py  perioddata.py
src/customerbaseanalysis/datasets/: __init__.py  _load.py
src/customerbaseanalysis/datasets/csv/: CDNOW_master_modified.csv
